--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "login-demo",
+  "name": "database-management",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.1",
     "react": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "recharts": "^2.1.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1"
   },
