--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.1",
+    "crypto-browserify": "^3.12.0",
+    "jszip": "^3.10.0",
     "react": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
