--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@tabler/icons": "^1.76.0",
+    "jszip": "^3.10.1",
     "material-ui-popup-state": "^4.0.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
@@ -17,6 +18,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
