Add apexcharts in packages.json

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.7",
     "@tabler/icons": "^1.76.0",
+    "apexcharts": "^3.35.4",
     "jszip": "^3.10.1",
     "material-ui-popup-state": "^4.0.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-perfect-scrollbar": "^1.5.8",
