--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@mui/material": "^5.8.7",
     "@tabler/icons": "^1.76.0",
     "apexcharts": "^3.35.4",
+    "formik": "^2.2.9",
+    "framer-motion": "^7.2.0",
     "jszip": "^3.10.1",
     "material-ui-popup-state": "^4.0.1",
     "react": "^18.2.0",
@@ -22,7 +24,8 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
